[gd_resource type="PackedScene" load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/ShopUI.gd" id="1"]

[node name="ShopUI" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -240.0
offset_right = 360.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ShopTitle" type="Label" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Shop"

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Gold: 0"
horizontal_alignment = 2

[node name="BuyTab" type="Button" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
disabled = true
theme_override_font_sizes/font_size = 13
text = "Buy"

[node name="SellTab" type="Button" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
theme_override_font_sizes/font_size = 13
text = "Sell"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="DetailLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
theme_override_font_sizes/font_size = 13
text = ""
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "Close Shop"
